# handmade-wayland

./: Cargo.toml
src/: dispatchers.rs  lib.rs  main.rs  pulseaudio.rs  shm.rs
src/dispatchers/: wl_buffer.rs  wl_callback.rs  wl_compositor.rs  wl_keyboard.rs  wl_pointer.rs  wl_registry.rs  wl_seat.rs  wl_shm.rs  wl_shm_pool.rs  wl_surface.rs  xdg_surface.rs  xdg_toplevel.rs  xdg_wm_base.rs
