[package]
name = "handmade-hero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-client = "0.31.1"
wayland-protocols = {version = "0.31.0", features = ["client"]}
libc = "0.2.149"
rand = "0.8.5"
memmap = "0.7.0"
